--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.4.0",
+    "react-notifications": "^1.7.4",
     "react-scripts": "3.4.3",
     "values.js": "^2.0.0"
   },
